feat: Updated OpenAPI spec (#134)
